parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program vdecl
   3          | program fdecl

   4  types : TYPE
   5        | BRICK
   6        | PLAYER
   7        | MAP
   8        | ARRAY TYPE
   9        | ARRAY BRICK
  10        | ARRAY PLAYER
  11        | ARRAY MAP

  12  fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  13  formals_opt :
  14              | formal_list

  15  formal_list : formal_decl
  16              | formal_list COMMA formal_decl

  17  formal_decl : TYPE ID
  18              | BRICK ID
  19              | PLAYER ID
  20              | MAP ID
  21              | ARRAY TYPE ID
  22              | ARRAY BRICK ID
  23              | ARRAY PLAYER ID
  24              | ARRAY MAP ID

  25  vdecl_list :
  26             | vdecl_list vdecl

  27  vdecl : TYPE ID SEMI
  28        | BRICK ID SEMI
  29        | PLAYER ID SEMI
  30        | MAP ID SEMI
  31        | ARRAY TYPE ID SEMI
  32        | ARRAY BRICK ID SEMI
  33        | ARRAY PLAYER ID SEMI
  34        | ARRAY MAP ID SEMI

  35  stmt_list :
  36            | stmt_list stmt

  37  stmt : expr SEMI
  38       | RETURN expr SEMI
  39       | LBRACE stmt_list RBRACE
  40       | IF LPAREN expr RPAREN stmt
  41       | IF LPAREN expr RPAREN stmt ELSE stmt
  42       | FOR LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt
  43       | WHILE LPAREN expr RPAREN stmt

  44  expr_opt :
  45           | expr

  46  expr : LITERALINT
  47       | LITERALFLOAT
  48       | LITERALBOOL
  49       | LITERALCHAR
  50       | LITERALSTRING
  51       | NEW ARRAY TYPE
  52       | NEW ARRAY BRICK
  53       | NEW ARRAY MAP
  54       | NEW ARRAY PLAYER
  55       | NEW BRICK LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN
  56       | NEW MAP LPAREN expr COMMA expr COMMA expr RPAREN
  57       | NEW PLAYER LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN
  58       | ID
  59       | ID REF ID
  60       | ID INVOKE expr
  61       | expr PLUS expr
  62       | expr MINUS expr
  63       | expr TIMES expr
  64       | expr DIVIDE expr
  65       | expr MOD expr
  66       | expr EXP expr
  67       | expr EQ expr
  68       | expr NEQ expr
  69       | expr LT expr
  70       | expr LEQ expr
  71       | expr GT expr
  72       | expr GEQ expr
  73       | expr AND expr
  74       | expr OR expr
  75       | expr SHORTADD expr
  76       | expr SHORTMINUS expr
  77       | expr SHORTTIMES expr
  78       | expr SHORTDIVIDE expr
  79       | NOT expr
  80       | expr ASSIGN expr
  81       | ID LPAREN actuals_opt RPAREN
  82       | LPAREN expr RPAREN

  83  call_expr : ID LPAREN actuals_opt RPAREN

  84  actuals_opt :
  85              | actuals_list

  86  actuals_list : expr
  87               | actuals_list COMMA expr

  88  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (88)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . vdecl  (2)
	program : program . fdecl  (3)
	%entry% : '\001' program .  (88)

	FUNC  shift 4
	ARRAY  shift 5
	BRICK  shift 6
	MAP  shift 7
	PLAYER  shift 8
	TYPE  shift 9
	$end  reduce 88

	vdecl  goto 10
	fdecl  goto 11


state 4
	fdecl : FUNC . ID ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)

	ID  shift 12
	.  error


state 5
	vdecl : ARRAY . TYPE ID SEMI  (31)
	vdecl : ARRAY . BRICK ID SEMI  (32)
	vdecl : ARRAY . PLAYER ID SEMI  (33)
	vdecl : ARRAY . MAP ID SEMI  (34)

	BRICK  shift 13
	MAP  shift 14
	PLAYER  shift 15
	TYPE  shift 16
	.  error


state 6
	vdecl : BRICK . ID SEMI  (28)

	ID  shift 17
	.  error


state 7
	vdecl : MAP . ID SEMI  (30)

	ID  shift 18
	.  error


state 8
	vdecl : PLAYER . ID SEMI  (29)

	ID  shift 19
	.  error


state 9
	vdecl : TYPE . ID SEMI  (27)

	ID  shift 20
	.  error


state 10
	program : program vdecl .  (2)

	.  reduce 2


state 11
	program : program fdecl .  (3)

	.  reduce 3


state 12
	fdecl : FUNC ID . ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)

	ASSIGN  shift 21
	.  error


state 13
	vdecl : ARRAY BRICK . ID SEMI  (32)

	ID  shift 22
	.  error


state 14
	vdecl : ARRAY MAP . ID SEMI  (34)

	ID  shift 23
	.  error


state 15
	vdecl : ARRAY PLAYER . ID SEMI  (33)

	ID  shift 24
	.  error


state 16
	vdecl : ARRAY TYPE . ID SEMI  (31)

	ID  shift 25
	.  error


state 17
	vdecl : BRICK ID . SEMI  (28)

	SEMI  shift 26
	.  error


state 18
	vdecl : MAP ID . SEMI  (30)

	SEMI  shift 27
	.  error


state 19
	vdecl : PLAYER ID . SEMI  (29)

	SEMI  shift 28
	.  error


state 20
	vdecl : TYPE ID . SEMI  (27)

	SEMI  shift 29
	.  error


state 21
	fdecl : FUNC ID ASSIGN . types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)

	ARRAY  shift 30
	BRICK  shift 31
	MAP  shift 32
	PLAYER  shift 33
	TYPE  shift 34
	.  error

	types  goto 35


state 22
	vdecl : ARRAY BRICK ID . SEMI  (32)

	SEMI  shift 36
	.  error


state 23
	vdecl : ARRAY MAP ID . SEMI  (34)

	SEMI  shift 37
	.  error


state 24
	vdecl : ARRAY PLAYER ID . SEMI  (33)

	SEMI  shift 38
	.  error


state 25
	vdecl : ARRAY TYPE ID . SEMI  (31)

	SEMI  shift 39
	.  error


state 26
	vdecl : BRICK ID SEMI .  (28)

	.  reduce 28


state 27
	vdecl : MAP ID SEMI .  (30)

	.  reduce 30


state 28
	vdecl : PLAYER ID SEMI .  (29)

	.  reduce 29


state 29
	vdecl : TYPE ID SEMI .  (27)

	.  reduce 27


state 30
	types : ARRAY . TYPE  (8)
	types : ARRAY . BRICK  (9)
	types : ARRAY . PLAYER  (10)
	types : ARRAY . MAP  (11)

	BRICK  shift 40
	MAP  shift 41
	PLAYER  shift 42
	TYPE  shift 43
	.  error


state 31
	types : BRICK .  (5)

	.  reduce 5


state 32
	types : MAP .  (7)

	.  reduce 7


state 33
	types : PLAYER .  (6)

	.  reduce 6


state 34
	types : TYPE .  (4)

	.  reduce 4


state 35
	fdecl : FUNC ID ASSIGN types . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)

	LPAREN  shift 44
	.  error


state 36
	vdecl : ARRAY BRICK ID SEMI .  (32)

	.  reduce 32


state 37
	vdecl : ARRAY MAP ID SEMI .  (34)

	.  reduce 34


state 38
	vdecl : ARRAY PLAYER ID SEMI .  (33)

	.  reduce 33


state 39
	vdecl : ARRAY TYPE ID SEMI .  (31)

	.  reduce 31


state 40
	types : ARRAY BRICK .  (9)

	.  reduce 9


state 41
	types : ARRAY MAP .  (11)

	.  reduce 11


state 42
	types : ARRAY PLAYER .  (10)

	.  reduce 10


state 43
	types : ARRAY TYPE .  (8)

	.  reduce 8


state 44
	fdecl : FUNC ID ASSIGN types LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)
	formals_opt : .  (13)

	ARRAY  shift 45
	BRICK  shift 46
	MAP  shift 47
	PLAYER  shift 48
	TYPE  shift 49
	RPAREN  reduce 13

	formals_opt  goto 50
	formal_list  goto 51
	formal_decl  goto 52


state 45
	formal_decl : ARRAY . TYPE ID  (21)
	formal_decl : ARRAY . BRICK ID  (22)
	formal_decl : ARRAY . PLAYER ID  (23)
	formal_decl : ARRAY . MAP ID  (24)

	BRICK  shift 53
	MAP  shift 54
	PLAYER  shift 55
	TYPE  shift 56
	.  error


state 46
	formal_decl : BRICK . ID  (18)

	ID  shift 57
	.  error


state 47
	formal_decl : MAP . ID  (20)

	ID  shift 58
	.  error


state 48
	formal_decl : PLAYER . ID  (19)

	ID  shift 59
	.  error


state 49
	formal_decl : TYPE . ID  (17)

	ID  shift 60
	.  error


state 50
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (12)

	RPAREN  shift 61
	.  error


state 51
	formals_opt : formal_list .  (14)
	formal_list : formal_list . COMMA formal_decl  (16)

	COMMA  shift 62
	RPAREN  reduce 14


state 52
	formal_list : formal_decl .  (15)

	.  reduce 15


state 53
	formal_decl : ARRAY BRICK . ID  (22)

	ID  shift 63
	.  error


state 54
	formal_decl : ARRAY MAP . ID  (24)

	ID  shift 64
	.  error


state 55
	formal_decl : ARRAY PLAYER . ID  (23)

	ID  shift 65
	.  error


state 56
	formal_decl : ARRAY TYPE . ID  (21)

	ID  shift 66
	.  error


state 57
	formal_decl : BRICK ID .  (18)

	.  reduce 18


state 58
	formal_decl : MAP ID .  (20)

	.  reduce 20


state 59
	formal_decl : PLAYER ID .  (19)

	.  reduce 19


state 60
	formal_decl : TYPE ID .  (17)

	.  reduce 17


state 61
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (12)

	LBRACE  shift 67
	.  error


state 62
	formal_list : formal_list COMMA . formal_decl  (16)

	ARRAY  shift 45
	BRICK  shift 46
	MAP  shift 47
	PLAYER  shift 48
	TYPE  shift 49
	.  error

	formal_decl  goto 68


state 63
	formal_decl : ARRAY BRICK ID .  (22)

	.  reduce 22


state 64
	formal_decl : ARRAY MAP ID .  (24)

	.  reduce 24


state 65
	formal_decl : ARRAY PLAYER ID .  (23)

	.  reduce 23


state 66
	formal_decl : ARRAY TYPE ID .  (21)

	.  reduce 21


state 67
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (12)
	vdecl_list : .  (25)

	.  reduce 25

	vdecl_list  goto 69


state 68
	formal_list : formal_list COMMA formal_decl .  (16)

	.  reduce 16


state 69
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (12)
	vdecl_list : vdecl_list . vdecl  (26)
	stmt_list : .  (35)

	ARRAY  shift 5
	BRICK  shift 6
	MAP  shift 7
	PLAYER  shift 8
	TYPE  shift 9
	LPAREN  reduce 35
	LBRACE  reduce 35
	RBRACE  reduce 35
	RETURN  reduce 35
	IF  reduce 35
	FOR  reduce 35
	WHILE  reduce 35
	NOT  reduce 35
	NEW  reduce 35
	LITERALBOOL  reduce 35
	LITERALINT  reduce 35
	LITERALFLOAT  reduce 35
	LITERALCHAR  reduce 35
	LITERALSTRING  reduce 35
	ID  reduce 35

	vdecl  goto 70
	stmt_list  goto 71


state 70
	vdecl_list : vdecl_list vdecl .  (26)

	.  reduce 26


state 71
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (12)
	stmt_list : stmt_list . stmt  (36)

	LPAREN  shift 72
	LBRACE  shift 73
	RBRACE  shift 74
	RETURN  shift 75
	IF  shift 76
	FOR  shift 77
	WHILE  shift 78
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	stmt  goto 87
	expr  goto 88


state 72
	expr : LPAREN . expr RPAREN  (82)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 89


state 73
	stmt : LBRACE . stmt_list RBRACE  (39)
	stmt_list : .  (35)

	.  reduce 35

	stmt_list  goto 90


state 74
	fdecl : FUNC ID ASSIGN types LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (12)

	.  reduce 12


state 75
	stmt : RETURN . expr SEMI  (38)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 91


state 76
	stmt : IF . LPAREN expr RPAREN stmt  (40)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (41)

	LPAREN  shift 92
	.  error


state 77
	stmt : FOR . LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (42)

	LPAREN  shift 93
	.  error


state 78
	stmt : WHILE . LPAREN expr RPAREN stmt  (43)

	LPAREN  shift 94
	.  error


state 79
	expr : NOT . expr  (79)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 95


state 80
	expr : NEW . ARRAY TYPE  (51)
	expr : NEW . ARRAY BRICK  (52)
	expr : NEW . ARRAY MAP  (53)
	expr : NEW . ARRAY PLAYER  (54)
	expr : NEW . BRICK LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN  (55)
	expr : NEW . MAP LPAREN expr COMMA expr COMMA expr RPAREN  (56)
	expr : NEW . PLAYER LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN  (57)

	ARRAY  shift 96
	BRICK  shift 97
	MAP  shift 98
	PLAYER  shift 99
	.  error


state 81
	expr : LITERALBOOL .  (48)

	.  reduce 48


state 82
	expr : LITERALINT .  (46)

	.  reduce 46


state 83
	expr : LITERALFLOAT .  (47)

	.  reduce 47


state 84
	expr : LITERALCHAR .  (49)

	.  reduce 49


state 85
	expr : LITERALSTRING .  (50)

	.  reduce 50


state 86
	expr : ID .  (58)
	expr : ID . REF ID  (59)
	expr : ID . INVOKE expr  (60)
	expr : ID . LPAREN actuals_opt RPAREN  (81)

	LPAREN  shift 100
	REF  shift 101
	INVOKE  shift 102
	SEMI  reduce 58
	RPAREN  reduce 58
	COMMA  reduce 58
	PLUS  reduce 58
	MINUS  reduce 58
	TIMES  reduce 58
	DIVIDE  reduce 58
	ASSIGN  reduce 58
	SHORTADD  reduce 58
	SHORTMINUS  reduce 58
	SHORTTIMES  reduce 58
	SHORTDIVIDE  reduce 58
	MOD  reduce 58
	EXP  reduce 58
	EQ  reduce 58
	NEQ  reduce 58
	LT  reduce 58
	LEQ  reduce 58
	GT  reduce 58
	GEQ  reduce 58
	AND  reduce 58
	OR  reduce 58


state 87
	stmt_list : stmt_list stmt .  (36)

	.  reduce 36


state 88
	stmt : expr . SEMI  (37)
	expr : expr . PLUS expr  (61)
	expr : expr . MINUS expr  (62)
	expr : expr . TIMES expr  (63)
	expr : expr . DIVIDE expr  (64)
	expr : expr . MOD expr  (65)
	expr : expr . EXP expr  (66)
	expr : expr . EQ expr  (67)
	expr : expr . NEQ expr  (68)
	expr : expr . LT expr  (69)
	expr : expr . LEQ expr  (70)
	expr : expr . GT expr  (71)
	expr : expr . GEQ expr  (72)
	expr : expr . AND expr  (73)
	expr : expr . OR expr  (74)
	expr : expr . SHORTADD expr  (75)
	expr : expr . SHORTMINUS expr  (76)
	expr : expr . SHORTTIMES expr  (77)
	expr : expr . SHORTDIVIDE expr  (78)
	expr : expr . ASSIGN expr  (80)

	SEMI  shift 103
	PLUS  shift 104
	MINUS  shift 105
	TIMES  shift 106
	DIVIDE  shift 107
	ASSIGN  shift 108
	SHORTADD  shift 109
	SHORTMINUS  shift 110
	SHORTTIMES  shift 111
	SHORTDIVIDE  shift 112
	MOD  shift 113
	EXP  shift 114
	EQ  shift 115
	NEQ  shift 116
	LT  shift 117
	LEQ  shift 118
	GT  shift 119
	GEQ  shift 120
	AND  shift 121
	OR  shift 122
	.  error


state 89
	expr : expr . PLUS expr  (61)
	expr : expr . MINUS expr  (62)
	expr : expr . TIMES expr  (63)
	expr : expr . DIVIDE expr  (64)
	expr : expr . MOD expr  (65)
	expr : expr . EXP expr  (66)
	expr : expr . EQ expr  (67)
	expr : expr . NEQ expr  (68)
	expr : expr . LT expr  (69)
	expr : expr . LEQ expr  (70)
	expr : expr . GT expr  (71)
	expr : expr . GEQ expr  (72)
	expr : expr . AND expr  (73)
	expr : expr . OR expr  (74)
	expr : expr . SHORTADD expr  (75)
	expr : expr . SHORTMINUS expr  (76)
	expr : expr . SHORTTIMES expr  (77)
	expr : expr . SHORTDIVIDE expr  (78)
	expr : expr . ASSIGN expr  (80)
	expr : LPAREN expr . RPAREN  (82)

	RPAREN  shift 123
	PLUS  shift 104
	MINUS  shift 105
	TIMES  shift 106
	DIVIDE  shift 107
	ASSIGN  shift 108
	SHORTADD  shift 109
	SHORTMINUS  shift 110
	SHORTTIMES  shift 111
	SHORTDIVIDE  shift 112
	MOD  shift 113
	EXP  shift 114
	EQ  shift 115
	NEQ  shift 116
	LT  shift 117
	LEQ  shift 118
	GT  shift 119
	GEQ  shift 120
	AND  shift 121
	OR  shift 122
	.  error


state 90
	stmt_list : stmt_list . stmt  (36)
	stmt : LBRACE stmt_list . RBRACE  (39)

	LPAREN  shift 72
	LBRACE  shift 73
	RBRACE  shift 124
	RETURN  shift 75
	IF  shift 76
	FOR  shift 77
	WHILE  shift 78
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	stmt  goto 87
	expr  goto 88


state 91
	stmt : RETURN expr . SEMI  (38)
	expr : expr . PLUS expr  (61)
	expr : expr . MINUS expr  (62)
	expr : expr . TIMES expr  (63)
	expr : expr . DIVIDE expr  (64)
	expr : expr . MOD expr  (65)
	expr : expr . EXP expr  (66)
	expr : expr . EQ expr  (67)
	expr : expr . NEQ expr  (68)
	expr : expr . LT expr  (69)
	expr : expr . LEQ expr  (70)
	expr : expr . GT expr  (71)
	expr : expr . GEQ expr  (72)
	expr : expr . AND expr  (73)
	expr : expr . OR expr  (74)
	expr : expr . SHORTADD expr  (75)
	expr : expr . SHORTMINUS expr  (76)
	expr : expr . SHORTTIMES expr  (77)
	expr : expr . SHORTDIVIDE expr  (78)
	expr : expr . ASSIGN expr  (80)

	SEMI  shift 125
	PLUS  shift 104
	MINUS  shift 105
	TIMES  shift 106
	DIVIDE  shift 107
	ASSIGN  shift 108
	SHORTADD  shift 109
	SHORTMINUS  shift 110
	SHORTTIMES  shift 111
	SHORTDIVIDE  shift 112
	MOD  shift 113
	EXP  shift 114
	EQ  shift 115
	NEQ  shift 116
	LT  shift 117
	LEQ  shift 118
	GT  shift 119
	GEQ  shift 120
	AND  shift 121
	OR  shift 122
	.  error


state 92
	stmt : IF LPAREN . expr RPAREN stmt  (40)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (41)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 126


state 93
	stmt : FOR LPAREN . expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (42)
	expr_opt : .  (44)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	SEMI  reduce 44

	expr  goto 127
	expr_opt  goto 128


state 94
	stmt : WHILE LPAREN . expr RPAREN stmt  (43)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 129


state 95
	expr : expr . PLUS expr  (61)
	expr : expr . MINUS expr  (62)
	expr : expr . TIMES expr  (63)
	expr : expr . DIVIDE expr  (64)
	expr : expr . MOD expr  (65)
	expr : expr . EXP expr  (66)
	expr : expr . EQ expr  (67)
	expr : expr . NEQ expr  (68)
	expr : expr . LT expr  (69)
	expr : expr . LEQ expr  (70)
	expr : expr . GT expr  (71)
	expr : expr . GEQ expr  (72)
	expr : expr . AND expr  (73)
	expr : expr . OR expr  (74)
	expr : expr . SHORTADD expr  (75)
	expr : expr . SHORTMINUS expr  (76)
	expr : expr . SHORTTIMES expr  (77)
	expr : expr . SHORTDIVIDE expr  (78)
	expr : NOT expr .  (79)
	expr : expr . ASSIGN expr  (80)

	PLUS  shift 104
	MINUS  shift 105
	TIMES  shift 106
	DIVIDE  shift 107
	MOD  shift 113
	EXP  shift 114
	EQ  shift 115
	NEQ  shift 116
	LT  shift 117
	LEQ  shift 118
	GT  shift 119
	GEQ  shift 120
	SEMI  reduce 79
	RPAREN  reduce 79
	COMMA  reduce 79
	ASSIGN  reduce 79
	SHORTADD  reduce 79
	SHORTMINUS  reduce 79
	SHORTTIMES  reduce 79
	SHORTDIVIDE  reduce 79
	AND  reduce 79
	OR  reduce 79


state 96
	expr : NEW ARRAY . TYPE  (51)
	expr : NEW ARRAY . BRICK  (52)
	expr : NEW ARRAY . MAP  (53)
	expr : NEW ARRAY . PLAYER  (54)

	BRICK  shift 130
	MAP  shift 131
	PLAYER  shift 132
	TYPE  shift 133
	.  error


state 97
	expr : NEW BRICK . LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN  (55)

	LPAREN  shift 134
	.  error


state 98
	expr : NEW MAP . LPAREN expr COMMA expr COMMA expr RPAREN  (56)

	LPAREN  shift 135
	.  error


state 99
	expr : NEW PLAYER . LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN  (57)

	LPAREN  shift 136
	.  error


state 100
	expr : ID LPAREN . actuals_opt RPAREN  (81)
	actuals_opt : .  (84)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	RPAREN  reduce 84

	expr  goto 137
	actuals_opt  goto 138
	actuals_list  goto 139


state 101
	expr : ID REF . ID  (59)

	ID  shift 140
	.  error


state 102
	expr : ID INVOKE . expr  (60)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 141


state 103
	stmt : expr SEMI .  (37)

	.  reduce 37


state 104
	expr : expr PLUS . expr  (61)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 142


state 105
	expr : expr MINUS . expr  (62)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 143


state 106
	expr : expr TIMES . expr  (63)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 144


state 107
	expr : expr DIVIDE . expr  (64)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 145


state 108
	expr : expr ASSIGN . expr  (80)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 146


state 109
	expr : expr SHORTADD . expr  (75)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 147


state 110
	expr : expr SHORTMINUS . expr  (76)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 148


state 111
	expr : expr SHORTTIMES . expr  (77)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 149


state 112
	expr : expr SHORTDIVIDE . expr  (78)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 150


state 113
	expr : expr MOD . expr  (65)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 151


state 114
	expr : expr EXP . expr  (66)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 152


state 115
	expr : expr EQ . expr  (67)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 153


state 116
	expr : expr NEQ . expr  (68)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 154


state 117
	expr : expr LT . expr  (69)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 155


state 118
	expr : expr LEQ . expr  (70)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 156


state 119
	expr : expr GT . expr  (71)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 157


state 120
	expr : expr GEQ . expr  (72)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 158


state 121
	expr : expr AND . expr  (73)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 159


state 122
	expr : expr OR . expr  (74)

	LPAREN  shift 72
	NOT  shift 79
	NEW  shift 80
	LITERALBOOL  shift 81
	LITERALINT  shift 82
	LITERALFLOAT  shift 83
	LITERALCHAR  shift 84
	LITERALSTRING  shift 85
	ID  shift 86
	.  error

	expr  goto 160


state 123
	expr : LPAREN expr RPAREN .  (82)

	.  reduce 82


state 124
	stmt : LBRACE stmt_list RBRACE .  (39)

	.  reduce 39


state 125
	stmt : RETURN expr SEMI .  (38)

	.  reduce 38

